issue #221 Phase 0 step 3d-1: NativeMemoryBackend (guest RAM の双方向 view)
#221 step 3d (native backend を emulin 本体に統合) のメモリ半分。HW 仮想化 backend
の guest 物理 RAM を表す MemoryBackend 実装を作り、KVM がマップする同一 off-heap
segment を emulin が読み書きできることを実証する。

新規:
- NativeMemoryBackend.java: off-heap MemorySegment (= KVM が
  KVM_SET_USER_MEMORY_REGION でマップする guest 物理 RAM) を直 index する
  MemoryBackend。load/store 8-64 は ValueLayout.JAVA_*_UNALIGNED (native LE =
  x86 guest と一致、非整列 guest pointer も可)、bulk は MemorySegment.copy
  (arraycopy intrinsic)、storeString/loadString/in/dump を実装。identity map
  (guest 仮想=物理=offset) 前提。alloc/mmap/brk/sigtramp/proc-maps 等は step 3d-2
  向け UnsupportedOperationException stub。
- NativeMemBackendSmoke.java: 双方向 bridge 実証。emulin が backend.store64/
  bulkStoreToMem で page table+code+seed(0x41) を guest RAM に書く → KVM が同
  segment を map し long mode で `mov rax,[0x8000];inc rax;mov [0x8000],rax;hlt`
  実行 → emulin が backend.load64(0x8000) で読み戻す。

実証 (WSL2): exit_reason=5(HLT) rax=0x42 rip=0x6014 backend.load64(0x8000)=0x42。
emulin が backend で書いた page table を CPU page-walk が読み (long mode 起動成功)、
backend で書いた code を guest が実行し、guest の write を backend が読み戻せた =
NativeMemoryBackend は guest RAM の忠実な双方向 view。

23-agent adversarial review (19 raw → 12 confirmed) を反映:
- [修正] loadString が per-byte Latin-1 char-cast だった → Memory.loadString と同じ
  UTF-8 decode + 10000 byte cap に。これは Phase 27 step 42 で Memory が直した
  非 ASCII path (Hungarian ő/ú 等) の mojibake バグの再来だった。検証: "café/ő" が
  UTF-8 で round-trip。
- [修正] storeString 戻り値が byte 数 → Memory と同じ **NUL の次アドレス**
  (address+len+1) に。chained-write 契約。MemoryBackend interface の Javadoc も訂正。
- [3d-2 申し送り] OOB は IndexOutOfBounds (host wild access は無く安全) だが Memory は
  guest SIGSEGV/EFAULT に変換 → 3d-2 で SyscallAmd64 統合時に try/catch で emulin の
  segfault path にマップ。
- [3d-2 申し送り] ★central blocker = 型 widening: Syscall.mem/AbstractCpu.mem 等は
  Memory concrete 型、code は execLock(#113 GIL)/e_ident/e_entry/segment[]/duplicate
  等 MemoryBackend に無い ~20 membe